app: logging: Improve logging
Logtags and consistent casing

Signed-off-by: Flopster101 <nahuelgomez329@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
             android:fontFamily="monospace"
             android:textSize="12sp"
             android:textColor="#00FF00"
-            android:text="Waiting for command..."/>
+            android:text=""/>
     </ScrollView>
 
 </LinearLayout>
